[package]
name = "lau-cudaclaw-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-cudaclaw-bridge"
description = "Bridge connecting lau-* math ecosystem to CUDAclaw GPU dispatch"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"

[dev-dependencies]
serde_json = "1"
